Lowered z-index value for embed viewer zpr (searchworks issue)

--- a/public/stylesheets/purl_embed.css
+++ b/public/stylesheets/purl_embed.css
@@ -246,7 +246,7 @@ a.active .pe-download-icon, a:visited .pe-download-icon {
 
 #pe-zpr-frame {
   display: none;
-  z-index: 2000;
+  z-index: 1000;
 }
 
 .pe-purl-url {
